@@ -1,3 +1,8 @@
+2012-05-22 Tue  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh (CygbuildCmdMkpatchMain): Copy quilt .pc
+	directory to make unpatching work.
+
 2012-03-25 Sun  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckReadme): Handle
